--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 absl-py==0.10.0
 astor==0.8.1
 astunparse==1.6.3
+blis==0.4.1
 cachetools==4.1.1
+catalogue==1.0.0
 certifi==2020.6.20
 chardet==3.0.4
+ChatterBot==1.0.8
 click==7.1.2
+cymem==2.0.3
+DateTime==4.3
+en-core-web-sm==2.3.1
+Flask==1.1.2
 gast==0.3.3
 google-auth==1.20.1
 google-auth-oauthlib==0.4.1
@@ -13,32 +20,47 @@ grpcio==1.31.0
 h5py==2.10.0
 idna==2.10
 importlib-metadata==1.7.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
 joblib==0.16.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 Markdown==3.2.2
+MarkupSafe==1.1.1
+mathparse==0.1.2
+murmurhash==1.0.2
 nltk==3.5
 numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
 Pillow==7.2.0
+plac==1.1.3
+preshed==3.0.2
 protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+python-dateutil==2.8.1
+pytz==2020.1
 regex==2020.7.14
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
 scipy==1.4.1
 six==1.15.0
+spacy==2.3.2
+SQLAlchemy==1.3.19
+srsly==1.0.2
 tensorboard==1.14.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
 tflearn==0.3.2
+thinc==7.4.1
 tqdm==4.48.2
 urllib3==1.25.10
+wasabi==0.8.0
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.1.0
+zope.interface==5.1.0
